src/test/test-workspace/invalid_configs/101_CONFIG_BLOCK_VALID.sqlx
config {
    type: "table",
    database: "my_db",
    schema: "my_schema",
    name: "test_table",
    description: "A proper table",
    columns: {
        col1: "First column"
    },
    tags: ["tag1", "tag2"],
    dependencies: ["dep1"],
    hasOutput: true,
    materialized: false,
    onSchemaChange: "EXTEND",
    protected: true,
    bigquery: {
        partitionBy: "DATE(timestamp)",
        clusterBy: ["col1"],
        requirePartitionFilter: true,
        partitionExpirationDays: 30,
        labels: {
            "env": "prod"
        }
    }
}
select 1 as test
